@@ -3,6 +3,7 @@ LIST OF CHANGES
 
 
  - add product_irods table to provide irods paths for data
+ - add columns to iseq_external_product_metrics for data deletion status
 
 release 6.17.0
  - Improve record creation for iseq_external_product_metrics.
